--- a/dictionary_integration/index.html
+++ b/dictionary_integration/index.html
@@ -17,6 +17,9 @@
         <title>Dictionary</title>
     </head>
     <body>
+        <div class="dark-mode">
+            <input type="checkbox" id="toggle">
+        </div>
         <audio id="sound"></audio>
         <div class="container">
             <div class="search-box">
